@@ -202,8 +202,14 @@ class CMSToolbar(BaseToolbar):
         self.is_staff = self.request.user.is_staff
         self.show_toolbar = self.is_staff
 
+        anonymous_on = get_cms_setting('TOOLBAR_ANONYMOUS_ON')
         enable_toolbar = get_cms_setting('CMS_TOOLBAR_URL__ENABLE')
         disable_toolbar = get_cms_setting('CMS_TOOLBAR_URL__DISABLE')
+
+        # Handle showing the toolbar for anonymouse users when they supply
+        # the enable toolbar parameter
+        if (anonymous_on and request.user.is_anonymous) and enable_toolbar in self.request.GET:
+            self.show_toolbar = True
 
         if self.show_toolbar:
             edit_mode = (
